--- a/src/app/components/test/test.component.html
+++ b/src/app/components/test/test.component.html
@@ -6,8 +6,14 @@
     </svg>
     <span>Add Quiz</span>
 </button>
+<div class="flex justify-between items-center">
 <h2 class="text-2xl font-semibold leading-tight mb-4">Quizes</h2>
 
+<a [routerLink]="['/test-questions']" class="p-2 bg-blue-500 rounded-3xl text-white hover:text-blue-500 hover:bg-white border border-solid border-1 border-white hover:border-blue-700">
+ 
+    <span>Affecting a Question</span>
+</a>
+</div>
 
 <!-- Table to Display Existing Tests -->
 <div class="overflow-hidden rounded-lg border border-gray-200 shadow-md m-5">
