--- a/src/app/components/quiz-dashboard/quiz-dashboard.component.html
+++ b/src/app/components/quiz-dashboard/quiz-dashboard.component.html
@@ -56,6 +56,11 @@
       <span class="sr-only">Quiz</span>
       Quiz
     </a>
+    <a [routerLink]="['/assign-tests']"
+      class="inline-flex items-center justify-center py-3 hover:text-gray-400 hover:bg-gray-700 focus:text-gray-400 focus:bg-gray-700 rounded-lg">
+      <span class="sr-only">Assignment</span>
+      Assignment
+    </a>
       </nav>
 
       <div class="inline-flex items-center justify-center h-20 w-20 border-t border-gray-700">
@@ -80,24 +85,9 @@
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h7" />
         </svg>
       </button>
-      <!-- <div class="relative w-full max-w-md sm:-ml-2">
-        <svg aria-hidden="true" viewBox="0 0 20 20" fill="currentColor"
-          class="absolute h-6 w-6 mt-2.5 ml-2 text-gray-400">
-          <path fill-rule="evenodd"
-            d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z"
-            clip-rule="evenodd" />
-        </svg>
-        <input type="text" role="search" placeholder="Quick Search"
-          class="py-2 pl-10 pr-4 w-full border-4 border-transparent placeholder-gray-400 focus:bg-gray-50 rounded-lg" />
-      </div> -->
+
   
-      <div class="relative w-full max-w-md sm:-ml-2">
-        <button
-        [routerLink]="['/start-quiz']"
-        class="px-4 py-2 bg-green-500 text-white rounded-lg hover:bg-white border-solid border-1 border-white hover:border-green-600 hover:text-green-600 focus:bg-white focus:text-green-600 focus:border-green-600">
-          Start Quiz
-        </button>
-      </div>
+
 
       <div class="flex flex-shrink-0 items-center ml-auto">
         <button class="inline-flex items-center p-2 hover:bg-gray-600 focus:bg-gray-700 rounded-lg">
@@ -200,4 +190,3 @@
   </div>
 </body>
 
-<!-- </html> -->
