--- a/src/app/components/assign-tests/assign-tests.component.html
+++ b/src/app/components/assign-tests/assign-tests.component.html
@@ -1,5 +1,5 @@
 <button (click)="openModal()" 
-  class="flex items-center justify-center m-auto mb-5 bg-blue-500 text-white hover:text-blue-500 hover:bg-white border border-solid border-1 border-white hover:border-blue-700 p-4"
+  class="rounded-lg flex items-center justify-center m-auto mb-5 bg-blue-500 text-white hover:text-blue-500 hover:bg-white border border-solid border-1 border-white hover:border-blue-700 p-4"
   type="button">
   <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="h-6 w-6 mr-2">
     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4v16m8-8H4"></path>
@@ -20,7 +20,7 @@
         <th scope="col" class="px-6 py-4 font-medium text-gray-900">Attempt Number</th>
         <th scope="col" class="px-6 py-4 font-medium text-gray-900">Student</th>
         <th scope="col" class="px-6 py-4 font-medium text-gray-900">Test</th>
-        <th scope="col" class="px-6 py-4 font-medium text-gray-900 text-center">Actions</th>
+        <th scope="col" class="px-6 py-4 font-medium text-gray-900">Actions</th>
       </tr>
     </thead>
     <tbody>
@@ -28,42 +28,28 @@
       <td class="px-6 py-4 whitespace-nowrap">{{ assignTest.startDate }}</td>
       <td class="px-6 py-4 whitespace-nowrap">{{ assignTest.endDate }}</td>
       <td class="px-6 py-4 whitespace-nowrap">{{ assignTest.raison }}</td>
-      <td class="px-6 py-4 whitespace-nowrap">{{ assignTest.finalResult }}</td>
+      <td class="px-6 py-4 whitespace-nowrap">    {{ assignTest.test.viewResult ? assignTest.finalResult : 'hidden' }}
+      </td>
       <td class="px-6 py-4 whitespace-nowrap">{{ assignTest.attemptNumber }}</td>
       <td class="px-6 py-4 whitespace-nowrap">{{ assignTest.student.firstName }} {{ assignTest.student.lastName }}</td>
       <td class="px-6 py-4 whitespace-nowrap">{{ assignTest.test.instructions }}</td>
       <td class="px-6 py-4 whitespace-nowrap">
-        <div class="flex justify-center gap-4">
-          <button type="submit" (click)="openModal();" (click)="editAssignTest(assignTest)"
-            class="mr-3 bg-orange-500 text-white hover:text-black hover:bg-white border border-solid border-1 border-white hover:border-orange-700 p-4">
-            Update
-            <div class="icon-1">
-            </div>
-            <div class="icon-2">
-            </div>
-            <div class="icon-3">
-            </div>
+        <div class="flex  gap-4 items-center">
+          <button type="submit" (click)="openModal();" (click)="editAssignTest(assignTest)">
+            <svg fill="#ff9500" width="32px" height="32px" viewBox="0 0 36 36" version="1.1" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <title>update-line</title> <path d="M19.5,28.1h-2.9c-0.5,0-0.9-0.3-1-0.8l-0.5-1.8c-0.2-0.1-0.2-0.1-0.4-0.2l-1.6,0.9c-0.4,0.2-0.9,0.2-1.2-0.2l-2.1-2.1 c-0.3-0.3-0.4-0.8-0.2-1.2l0.9-1.6c-0.1-0.2-0.1-0.2-0.2-0.4l-1.8-0.5c-0.4-0.1-0.8-0.5-0.8-1v-2.9c0-0.5,0.3-0.9,0.8-1l1.8-0.5 c0.1-0.2,0.1-0.2,0.2-0.4l-0.9-1.6c-0.2-0.4-0.2-0.9,0.2-1.2l2.1-2.1c0.3-0.3,0.8-0.4,1.2-0.2l1.6,0.9c0.2-0.1,0.2-0.1,0.4-0.2 l0.5-1.8c0.1-0.4,0.5-0.8,1-0.8h2.9c0.5,0,0.9,0.3,1,0.8l0.5,1.8c0.2,0.1,0.2,0.1,0.4,0.2l1.6-0.9c0.4-0.2,0.9-0.2,1.2,0.2 l2.1,2.1c0.3,0.3,0.4,0.8,0.2,1.2l-0.9,1.6c0.1,0.2,0.1,0.2,0.2,0.4l1.8,0.5c0.4,0.1,0.8,0.5,0.8,1v2.9c0,0.5-0.3,0.9-0.8,1 l-1.8,0.5c-0.1,0.2-0.1,0.2-0.2,0.4l0.9,1.6c0.2,0.4,0.2,0.9-0.2,1.2l-2.1,2.1c-0.3,0.3-0.8,0.4-1.2,0.2l-1.6-0.9 c-0.2,0.1-0.2,0.1-0.4,0.2l-0.5,1.8C20.3,27.8,19.9,28.1,19.5,28.1z M17.3,26.1h1.4l0.5-2.1l0.5-0.2c0.4-0.1,0.7-0.3,1.1-0.4 l0.5-0.3l1.9,1.1l1-1l-1.1-1.9l0.3-0.5c0.2-0.3,0.3-0.7,0.4-1.1l0.2-0.5l2.1-0.5v-1.4L24,16.8l-0.2-0.5c-0.1-0.4-0.3-0.7-0.4-1.1 l-0.3-0.5l1.1-1.9l-1-1l-1.9,1.1l-0.5-0.3c-0.3-0.2-0.7-0.3-1.1-0.4L19.2,12l-0.5-2.1h-1.4L16.8,12l-0.5,0.2 c-0.4,0.1-0.7,0.3-1.1,0.4l-0.5,0.3l-1.9-1.1l-1,1l1.1,1.9l-0.3,0.5c-0.2,0.3-0.3,0.7-0.4,1.1L12,16.8l-2.1,0.5v1.4l2.1,0.5 l0.2,0.5c0.1,0.4,0.3,0.7,0.4,1.1l0.3,0.5l-1.1,1.9l1,1l1.9-1.1l0.5,0.3c0.3,0.2,0.7,0.3,1.1,0.4l0.5,0.2L17.3,26.1z M27.1,19.5 L27.1,19.5L27.1,19.5z"></path> <path d="M18,22.3c-2.4,0-4.3-1.9-4.3-4.3s1.9-4.3,4.3-4.3c2.4,0,4.3,1.9,4.3,4.3S20.4,22.3,18,22.3z M18,15.7 c-1.3,0-2.3,1-2.3,2.3s1,2.3,2.3,2.3c1.3,0,2.3-1,2.3-2.3S19.3,15.7,18,15.7z"></path> <path d="M18,2c-0.6,0-1,0.4-1,1s0.4,1,1,1c7.7,0,14,6.3,14,14s-6.3,14-14,14S4,25.7,4,18c0-2.8,0.8-5.5,2.4-7.8v1.2 c0,0.6,0.4,1,1,1s1-0.4,1-1v-5h-5c-0.6,0-1,0.4-1,1s0.4,1,1,1h1.8C3.1,11.1,2,14.5,2,18c0,8.8,7.2,16,16,16s16-7.2,16-16 S26.8,2,18,2z"></path> <rect width="36" height="36" fill-opacity="0"></rect> </g></svg>
           </button>
-          <button (click)="deleteAssignTest(assignTest)"
-            class="mr-3 bg-red-600 text-white hover:text-black hover:bg-white border border-solid border-1 border-white hover:border-red-700 p-4">
-            Delete
-            <div class="icon-1">
-            </div>
-            <div class="icon-2">
-            </div>
-            <div class="icon-3">
-            </div>
+          <button (click)="deleteAssignTest(assignTest)">
+            <svg width="32px" height="32px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M6 7V18C6 19.1046 6.89543 20 8 20H16C17.1046 20 18 19.1046 18 18V7M6 7H5M6 7H8M18 7H19M18 7H16M10 11V16M14 11V16M8 7V5C8 3.89543 8.89543 3 10 3H14C15.1046 3 16 3.89543 16 5V7M8 7H16" stroke="#f33f3f" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path> </g></svg>          
           </button>
-          <button *ngIf="assignTest.attemptNumber > 0"
-          (click)="startQuiz(assignTest.test.testId, assignTest.assignTestId || 0 , assignTest.attemptNumber)"
-          class="mr-3 bg-green-600 text-white hover:text-black hover:bg-white border border-solid border-1 border-white hover:border-green-700 p-4">
-          Start Quiz
-          <div class="icon-1"></div>
-          <div class="icon-2"></div>
-          <div class="icon-3"></div>
-        </button>
+            <ng-container *ngIf="assignTest.test.viewAnswer">
+              <app-assignment-test-details [assignTest]="assignTest"></app-assignment-test-details>
+            </ng-container>
+          <button *ngIf="assignTest.attemptNumber > 0" (click)="startQuiz(assignTest.test.testId, assignTest.assignTestId || 0 , assignTest.attemptNumber)">
+            <svg height="32px" width="32px" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 511.998 511.998" xml:space="preserve" fill="#000000"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <g> <path style="fill:#507C5C;" d="M122.469,239.014H58.611c-8.291,0-15.011-6.721-15.011-15.011V93.183 c0-25.596,20.824-46.418,46.418-46.418h331.965c25.596,0,46.418,20.824,46.418,46.418c0,8.291-6.721,15.011-15.011,15.011 c-8.291,0-15.011-6.721-15.011-15.011c0-9.04-7.356-16.395-16.395-16.395H90.017c-9.04,0-16.395,7.356-16.395,16.395v115.808 h48.849c8.291,0,15.011,6.721,15.011,15.011S130.76,239.014,122.469,239.014z"></path> <path style="fill:#507C5C;" d="M421.983,465.234H90.017c-25.596,0-46.418-20.824-46.418-46.418c0-8.291,6.721-15.011,15.011-15.011 s15.011,6.721,15.011,15.011c0,9.04,7.356,16.395,16.395,16.395h331.965c9.04,0,16.395-7.356,16.395-16.395V302.237 c0-8.291,6.721-15.011,15.011-15.011c8.291,0,15.011,6.721,15.011,15.011v116.579C468.401,444.412,447.579,465.234,421.983,465.234 z"></path> </g> <polygon style="fill:#CFF09E;" points="413.043,132.738 496.989,189.428 413.043,246.117 "></polygon> <path style="fill:#507C5C;" d="M413.042,261.129c-2.414,0-4.834-0.581-7.043-1.755c-4.903-2.604-7.968-7.704-7.968-13.257v-113.38 c0-5.553,3.065-10.651,7.968-13.257c4.904-2.606,10.846-2.292,15.445,0.815l83.945,56.689c4.133,2.791,6.609,7.453,6.609,12.44 s-2.477,9.649-6.61,12.44l-83.945,56.689C418.916,260.264,415.984,261.129,413.042,261.129z M428.055,160.989v56.877l42.112-28.438 L428.055,160.989z"></path> <path style="fill:#CFF09E;" d="M413.279,164.388H224.448c-16.098,0-29.148,13.049-29.148,29.148v101.672H15.011v52.403h203.544 c16.098,0,29.148-13.049,29.148-29.148V216.789h165.576V164.388z"></path> <path style="fill:#507C5C;" d="M218.556,362.622H15.011C6.721,362.622,0,355.902,0,347.611v-52.403 c0-8.291,6.721-15.011,15.011-15.011H180.29v-86.661c0-24.35,19.809-44.159,44.159-44.159H413.28 c8.291,0,15.011,6.721,15.011,15.011v52.402c0,8.291-6.721,15.011-15.011,15.011H262.715v86.661 C262.715,342.813,242.904,362.622,218.556,362.622z M30.023,332.599h188.533c7.794,0,14.136-6.342,14.136-14.136V216.791 c0-8.291,6.721-15.011,15.011-15.011h150.566v-22.379h-173.82c-7.794,0-14.136,6.342-14.136,14.136v101.672 c0,8.291-6.721,15.011-15.011,15.011H30.023V332.599z"></path> </g></svg>          
+          </button>       
         </div>
     </tr>
+    
     </tbody>
   </table>
 </div>
@@ -137,7 +123,7 @@
               </select>
             </div>
           </div>
-          <div class="flex justify-end">
+          <div class="flex justify-center">
             <button type="button" (click)="closeModal() ; resetForm()"
               class="px-4 py-2 text-sm font-medium text-gray-700 bg-white border border-gray-300 rounded-md shadow-sm hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500"
               data-modal-close="crud-modal">Cancel</button>
@@ -150,8 +136,3 @@
     </div>
   </div>
 </div>
-
-
-
-
-        
