--- a/src/app/components/question/question.component.html
+++ b/src/app/components/question/question.component.html
@@ -113,7 +113,7 @@
             </div>
             <div class="col-span-1">
               <label for="answersNumberCorrect"
-                class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Answers Number Correct</label>
+                class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Answers Correct</label>
               <input type="number" name="answersNumberCorrect" id="answersNumberCorrect"
                 class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
                 [(ngModel)]="newQuestion.value.answersNumberCorrect" required>
