--- a/src/app/components/quiz-dashboard/quiz-dashboard.component.html
+++ b/src/app/components/quiz-dashboard/quiz-dashboard.component.html
@@ -120,7 +120,7 @@
         </div>
       </div>
     </header>
-    <main class="p-6 sm:p-10 space-y-6" *ngIf="!isStartQuizRoute()">
+    <main class="p-6 sm:p-10 space-y-6" *ngIf="!isSalonDetailsRoute()">
       <div class="flex flex-col space-y-6 md:space-y-0 md:flex-row justify-between">
         <div class="mr-6">
           <h1 class="text-4xl font-semibold mb-2">Welcome To SatoQuiz</h1>
@@ -173,13 +173,18 @@
       </section>
 
     </main>
-    <main class="p-6 sm:p-10 space-y-6">
-
+    <main *ngIf="!isSalonDetailsRoute()" class="p-6 sm:p-10 space-y-6">
       <section class="">
         <router-outlet></router-outlet>
       </section>
-
     </main>
+    
+    <main *ngIf="isSalonDetailsRoute()">
+      <section class="">
+        <router-outlet></router-outlet>
+      </section>
+    </main>
+    
   </div>
 </body>
 
